# cmakeauto

./: .gitignore  CmakeLists.txt  README.md  cmakeauto.c  cmakeauto.h  cmakeautoargs.c  cmakelinux.c
templates/helloworld/: README.md
templates/helloworld/include/: main.h
templates/helloworld/src/: CMakeLists.txt
templates/helloworlddll/: README.md
templates/helloworlddll/src/: CMakeLists.txt  main.c
templates/helloworlddriver/: README.md
templates/helloworlddriver/cmake/: FindWDK.cmake
templates/helloworlddriver/src/: CMakeLists.txt  main.c
